[package]
name = "i3-tmux-integration"
version = "0.1.0"
authors = ["roblabla <robinlambertz+dev@gmail.com>"]

[dependencies]
pty = "*"
libc = "*"
termios = "*"
twoway = "*"
chan = "*"
log = "*"
fern = "*"
i3ipc = "*"
byteorder = "*"
nix = { git = "https://github.com/roblabla/nix", branch = "bugfix-multipleFdInCmsg" }
nom = "*"
tempdir = "*"
backtrace = "*"
unescape = "*"
