[package]
name = "i3-tmux-integration"
version = "0.1.0"
authors = ["roblabla <robinlambertz+dev@gmail.com>"]

[dependencies]
pty = "*"
libc = "*"
termios = "*"
twoway = "*"
chan = "*"
chan-signal = "*"
log = "*"
fern = "*"
i3ipc = "*"
byteorder = "*"
nix = { git = "https://github.com/roblabla/nix", branch = "bugfix-multipleFdInCmsg", feature = ["signalfd"] }
nom = { git = "https://github.com/roblabla/nom", branch = "feature-stdlibCompileError", features = ["nightly"] }
tempdir = "*"
backtrace = "*"
unescape = "*"
